--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<center><b>
-			<h3>Department of Physical Science</h3>
+			<h3>Department of  Science</h3>
 			<h3>Faculty of Applied Science</h3>
 			<h3>University of Vavuniya</h3>
 			<h3>Timetable-First Semester-Academic Year 2020/21</h3>
